fix: Adjust gap in header and add padding to stripes for improved layout

--- a/sites/polgarand.org/assets/_window.scss
+++ b/sites/polgarand.org/assets/_window.scss
@@ -9,7 +9,7 @@
 
     .header {
         display: flex;
-        gap: 8px;
+        gap: 6px;
         padding-bottom: 6px;
 
         .title {
@@ -74,6 +74,7 @@
 
         .stripes {
             width: 100%;
+            padding: 1px 2px 0 0;
         }
 
         .stripe {
